@@ -8,6 +8,7 @@ V.NEXT
 - [PATCH] Adding null checks for CancelHelper (CBA) (#2105)
 - [MINOR] Update YubiKit version to 2.3.0 (#2112) Note: This version of YubiKit contains new logging libraries. Projects using the SLF4j and/or logback-android dependencies must bump their versions to at least 2.0.7 and 3.0.0, respectively.
 - [MINOR] Capture perf telemetry for cache & network operations (#2124)
+- [MINOR] Add method to flush shared preference file manager (#2130)
 
 V.14.0.1
 ----------
